# evergreen

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  clippy.toml  justfile
.cargo/: config.toml
.claude/skills/bevy-18/: SKILL.md
.claude/skills/create-dialog/: SKILL.md
.claude/skills/upload-yt-script/: SKILL.md
.claude/skills/wiki-create-character/: SKILL.md
.claude/skills/wiki-enrich/: SKILL.md
.claude/skills/wiki-update/: SKILL.md
.github/workflows/: deploy.yml
.husky/hooks/: pre-commit
assets/dialogue/barks/: bigby_barks.dialog.ron  bigby_barks2.dialog.ron  bigby_barks3.dialog.ron  cadwallader_barks.dialog.ron  cadwallader_barks2.dialog.ron  cadwallader_barks3.dialog.ron  drizella_barks.dialog.ron  drizella_barks2.dialog.ron  (+15 more)
assets/locale/: en-US.locale.ron  es-ES.locale.ron
assets/shaders/: biome_atmosphere.wgsl  time_of_day.wgsl
assets/tilesets/: hotspring_grass.json  ocean_deep_shallow.json  ocean_sand.json  pier_ocean.json  pier_sand.json  pond_darkwood.json  pond_grass.json  river_deep_shallow.json  river_grass.json  sand_grass.json  waterfall_grass.json
camera/: Cargo.toml
camera/src/: config.rs  dialogue_focus.rs  lib.rs  mode.rs  plugin.rs  setup.rs  smooth.rs
combat/: Cargo.toml
combat/src/: lib.rs  modifier.rs  plugin.rs  systems.rs
diagnostics/: Cargo.toml
diagnostics/src/: debug_panel.rs  frame_stages.rs  lib.rs  overlay.rs  plugin.rs
dialog/: Cargo.toml
dialog/src/: asset.rs  barks.rs  components.rs  events.rs  flags.rs  history.rs  lib.rs  locale.rs  plugin.rs  runner.rs
dialog/src/runner/: advance.rs  choice.rs  detect.rs  end.rs  mod.rs  start.rs  state.rs
enemy/: Cargo.toml
enemy/src/: peasant.rs  plugin.rs
evergreen_main/: Cargo.toml  index.html
evergreen_main/src/: main.rs
keybinds/: Cargo.toml
keybinds/src/: action.rs  bindings.rs  lib.rs  plugin.rs  remap.rs  serialize.rs  storage.rs  systems.rs
level/: Cargo.toml
level/src/: area.rs  bark_bubbles.rs  beach.rs  blending.rs  creatures.rs  decorations.rs  enemies.rs  exit.rs  galen.rs  grass.rs  lib.rs  light_occluders.rs  npc_anim.rs  npc_homes.rs  npc_labels.rs  npc_wander.rs  npcs.rs  plugin.rs  portal.rs  puddles.rs  reveal.rs  scenery.rs  shadows.rs  spawning.rs  terrain.rs  tile_map.rs  wang.rs  water.rs  water_fauna.rs  water_flora.rs  weather.rs  world.rs
level/src/biome_registry/: biomes.rs  creature.rs  decoration.rs  grass.rs  mod.rs  tree.rs  weather.rs
level/src/water/: animation.rs  depth.rs  generate.rs  mod.rs  ocean.rs  pier.rs  rivers.rs  shore.rs  tiles.rs
level/src/weather/: dust.rs  firefly.rs  fog.rs  helpers.rs  leaves_rain.rs  mod.rs  state.rs  wind.rs
lighting/: Cargo.toml
lighting/src/: ambient.rs  exit_light.rs  lib.rs  occluders.rs  plugin.rs  torch.rs
models/: Cargo.toml
models/src/: alignment.rs  attack.rs  camera_follow.rs  creature.rs  decoration.rs  distance.rs  game_states.rs  grass.rs  layer.rs  lib.rs  lighting.rs  multiverse.rs  npc_anim.rs  palette.rs  player.rs  reveal.rs  scenery.rs  settings.rs  shadow.rs  speed.rs  tags.rs  tailwind.rs  tile.rs  time.rs  weather.rs  wind.rs
player/: Cargo.toml
player/src/: animation.rs  collision.rs  exit_check.rs  hop.rs  input.rs  lib.rs  movement.rs  plugin.rs  portal_trigger.rs  rustle.rs  spawning.rs  water_state.rs  y_sort.rs
post_processing/: Cargo.toml
post_processing/src/: atmosphere.rs  bloom_config.rs  bloom_setup.rs  clock.rs  grading.rs  lerp_config.rs  lib.rs  math.rs  plugin.rs  presets.rs  sync.rs  time_of_day.rs  time_sync.rs  toggles.rs
research/: wiki_nav.md  wiki_summary.md
research/art/: adamcyounis_style.md  pixellab_style_guide.md
research/characters/: cadwallader.md  character_alignments.md  morgana.md  mother_gothel.md  npc_list.md  player_characters.md
research/quests/: quest_list.md
research/sessions/: hero_questions.md  session_summary.md
research/world/: factions.md  factions_alignment.md  lore_events.md
save/: Cargo.toml
save/src/: file.rs  lib.rs  lore.rs  persistable.rs  plugin.rs  storage.rs
scripts/: bump-versions.sh  wiki_push.sh
survive_main/: Cargo.toml
survive_main/src/: main.rs
tools/: compose_npc_sheets.py
ui/: Cargo.toml
ui/src/: credits.rs  design_tokens.rs  despawn.rs  dialog_box.rs  focus.rs  fonts.rs  game_over_menu.rs  hud.rs  keybind_screen.rs  level_complete.rs  lib.rs  lore_page.rs  main_menu.rs  minimap.rs  pause_menu.rs  plugin.rs  screen.rs  settings_screen.rs  theme.rs  window.rs
(+233 files in other folders)
