[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
incremental = true

[profile.release]
codegen-units = 1

[workspace]
resolver = "2"
members = [
    "diagnostics",
    "models",
    "evergreen_main",
    "ui",
    "combat",
    "camera",
    "level",
    "player",
]
