[package]
name = "dialog"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bevy = "0.18.1"
keybinds = { path = "../keybinds" }
models = { path = "../models" }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12"
rand = "0.10"
getrandom = { version = "0.4", features = ["wasm_js"] }
futures-lite = "2.6.1"
