[package]
name = "evergreen_main"
version = "0.1.0"
edition = "2021"

[dependencies]
ui = { path = "../ui" }
models = { path = "../models" }
diagnostics = { path = "../diagnostics" }
combat = { path = "../combat" }
camera = { path = "../camera" }
level = { path = "../level" }
player = { path = "../player" }
bevy = "0.18"

[dev-dependencies]
husky-rs = "0.3.2"
