[package]
name = "evergreen_main"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
ui = { path = "../ui" }
models = { path = "../models" }
diagnostics = { path = "../diagnostics" }
combat = { path = "../combat" }
camera = { path = "../camera" }
level = { path = "../level" }
player = { path = "../player" }
dialog = { path = "../dialog" }
keybinds = { path = "../keybinds" }
post_processing = { path = "../post_processing" }
save     = { path = "../save" }
bevy = { version = "0.18", features = ["webp"] }

[dev-dependencies]
husky-rs = "0.3.2"
