[package]
name = "keybinds"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bevy = "0.18"
models = { path = "../models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-bindgen = "0.2"
