[package]
name = "save"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bevy       = "0.18.1"
models     = { path = "../models" }
keybinds   = { path = "../keybinds" }
dialog     = { path = "../dialog" }
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys      = { version = "0.3.95", features = ["Window", "Storage"] }
wasm-bindgen = "0.2.118"
